--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
 body {
-	background-color: rgb(71 85 105);
+	background-color: rgb(18, 18, 18);
+	color: rgb(255, 255, 255);
+}
+
+header,
+footer {
+	color: white;
+	background-color: rgb(33, 33, 33);
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;
+}
+
+.card {
+}
+
+.btn {
+	background-color: rgb(61, 61, 61);
+}
+
+.primary-text {
+	color: rgb(255, 255, 255);
+}
+
+.secondary-text {
+	color: rgb(170, 170, 170);
 }
